high contrast on some buttons in modals fixed.

--- a/theme/highcontrast.less
+++ b/theme/highcontrast.less
@@ -45,6 +45,7 @@
 
         &:focus {
             outline: 1px solid @selected;
+            color: @selected !important;
 
             i, span {
                 color: @selected !important;
